<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.filter.FilterBottomSheetFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_18sp"
        android:text="@string/filter"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/space_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/best_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/best_match"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:drawableTint="@color/grey"
        app:drawableStartCompat="@drawable/ic_point" />
    <TextView
        android:id="@+id/most_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/most_stars"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/best_match"
        app:drawableTint="@color/grey"
        app:drawableStartCompat="@drawable/ic_point" />

    <TextView
        android:id="@+id/fewest_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/fewest_stars"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/most_stars"
        app:drawableTint="@color/grey"
        app:drawableStartCompat="@drawable/ic_point" />

    <TextView
        android:id="@+id/most_forks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/most_forks"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/fewest_stars"
        app:drawableStartCompat="@drawable/ic_point"
        app:drawableTint="@color/grey" />

    <TextView
        android:id="@+id/fewest_forks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/fewest_forks"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/most_forks"
        app:drawableStartCompat="@drawable/ic_point"
        app:drawableTint="@color/grey" />

    <TextView
        android:id="@+id/recently_udapted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/recently_updated"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/fewest_forks"
        app:drawableStartCompat="@drawable/ic_point"
        app:drawableTint="@color/grey" />

    <TextView
        android:id="@+id/least_recently_udapted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/space_20dp"
        android:text="@string/least_recently_updated"
        android:textColor="@color/grey"
        android:layout_marginBottom="@dimen/space_30dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@id/recently_udapted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableTint="@color/grey"
        app:drawableStartCompat="@drawable/ic_point" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="@dimen/space_20dp"
        android:layout_height="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_20dp"
        android:background="@drawable/ic_clear"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>